header nav alignment fix

--- a/client/components/header/header.scss
+++ b/client/components/header/header.scss
@@ -1,18 +1,21 @@
 header {
-  background-color: var(--nav-back-color);
-  // border-bottom: 1px solid var(--text-color);
+  // background-color: var(--nav-back-color);
+  background-color: transparent;
   position: fixed;
   top: 0;
-  width: 100%;
-  z-index: 100;
+  right: 0;
+  width: calc(100vw - 15rem);
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5rem;
 
   nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    // max-width: 1400px;
-    margin: 0 auto;
-    padding: 0 5rem;
+    // margin: 0 auto;
     height: 4rem;
 
     #logo {
@@ -41,4 +44,3 @@ header {
     }
   }
 }
-
