--- a/client/components/sideNav/sideNav.scss
+++ b/client/components/sideNav/sideNav.scss
@@ -7,9 +7,8 @@ aside {
   align-items: center;
   position: relative;
   z-index: 2;
-  width: 250px;
-  height: calc(100vh - 4rem);
-  margin-top: 4rem;
+  width: 15rem;
+  height: 100%;
   padding: 20px;
 
   .aside-links {
